# generic-factory

./: CMakeLists.txt  README.md  genericfactory.hpp
examples/: CMakeLists.txt  main.cpp
